[package]
name = "ronvoy"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
async-executor = "1"
async-io = "1"
async-net = "1"
async-rustls = "0.2"
futures-lite = "1"
pico-args = "0.4"
ring = { version = "0.16", features=["std"] }
mimalloc = { version = "*", default-features = false }

[profile.release]
opt-level = 3
lto = true
debug = 0
panic = "abort"
