[package]
name = "ronvoy-core"
version = "0.1.0"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
arc-swap = "1"
axum = { version = "0.4", features = [ "http2" ] }
envoy-control-plane = "0.4"
futures = "0.3"
glob = "0.3"
hyper = "0.14"
hyper-rustls = { version = "0.23", default-features = false, features = ["webpki-tokio", "http1", "http2", "tls12", "logging"] }
pico-args = "0.4"
serde_json = "1"
serde_yaml = "0.8"
socket2 = { version = "0.4", features = ["all"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"
tower = "0.4"
uuid = { version = "0.8", default-features = false, features = ["v4"] }

[build-dependencies]
built = "0.5"

[dev-dependencies]
reqwest = "0.11"
