[package]
name = "ronvoy-server"
version = "0.1.0"
edition = "2021"
authors = ["Bobby Powers <bobbypowers@gmail.com>"]
license = "Apache-2.0"

[dependencies]
axum = "0.4"
pico-args = "0.4"
ronvoy-proxy = { version = "0.1", path = "../ronvoy-proxy" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
