[package]
name = "upstream-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true # this is debug *info*, which we want (and "just" fattens the binary)
panic = "abort"
