[package]
name = "upstream-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
serde_json = "1"
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1", features = ["full"] }
