[package]
name = "upstream-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
jemallocator = "0.3"
pico-args = "0.4"
ronvoy-core = { version = "0.1", path = "../../ronvoy-core"}
serde_json = "1"
tokio = { version = "1", features = ["full"] }
